--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,24 @@ name = "baru-trj" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "id-trojan.tingkehvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.id-trojan.tingkehvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.id-trojan.tingkehvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.id-trojan.tingkehvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.id-trojan.tingkehvpn.my.id"
+custom_domain = true
+[[routes]]
+pattern = "beta.zoom.us.id-trojan.tingkehvpn.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,5 +30,5 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-PASSWORD = "b6633d5e97f99160c4a39c335b639e7b26e2f082bfda7ac287e536cb"
+PASSWORD = "Putrivpn"
 PROXYIP = "35.219.50.99"
