--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,30 +1,30 @@
-name = "ID" # todo
+name = "indo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "ID.prem-fachri.biz.id"
+pattern = "indo.prem-fachri.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.ID.prem-fachri.biz.id"
+pattern = "shopee.co.id.indo.prem-fachri.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.ID.prem-fachri.biz.id"
+pattern = "cf.shopee.co.id.indo.prem-fachri.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.ID.prem-fachri.biz.id"
+pattern = "cv.shopee.sg.indo.prem-fachri.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.ID.prem-fachri.biz.id"
+pattern = "cvs-deo.shopeemobile.com.indo.prem-fachri.biz.id"
 custom_domain = true
 
 [vars]
-# UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
+# UUID = "93e633c3-1071-4073-9ff2-a1088942eada"
 # PROXYIP = "1.2.3.4"
 # DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
-# NODE_ID = "1"
-# API_TOKEN = "example_dev_token"
-# API_HOST = "api.v2board.com"
+# NODE_ID = "01ca3632d680709b6c7f47be372eb639"
+# API_TOKEN = "bPuKBRbnkU8K_Vo8tGNaKCedTVdiKQA0KBCMQA0J"
+# API_HOST = "indo.prem-fachri.biz.id"
 UUID = "93e633c3-1071-4073-9ff2-a1088942eada"
