--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sgdo" # todo
+name = "linode" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgdo.prem-fachri.biz.id"
+pattern = "linode.prem-fachri.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.sgdo.prem-fachri.biz.id"
+pattern = "shopee.co.id.linode.prem-fachri.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sgdo.prem-fachri.biz.id"
+pattern = "cf.shopee.co.id.linode.prem-fachri.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.sgdo.prem-fachri.biz.id"
+pattern = "cv.shopee.sg.linode.prem-fachri.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.sgdo.prem-fachri.biz.id"
+pattern = "cvs-deo.shopeemobile.com.linode.prem-fachri.biz.id"
 custom_domain = true
 
 [vars]
@@ -26,5 +26,5 @@ custom_domain = true
 # DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
 # NODE_ID = "01ca3632d680709b6c7f47be372eb639"
 # API_TOKEN = "bPuKBRbnkU8K_Vo8tGNaKCedTVdiKQA0KBCMQA0J"
-# API_HOST = "sgdo.prem-fachri.biz.id"
+# API_HOST = "linode.prem-fachri.biz.id"
 UUID = "93e633c3-1071-4073-9ff2-a1088942eada"
