--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "indo" # todo
+name = "oracle" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "indo.1lunatic1icepick.my.id"
+pattern = "oracle.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.indo.1lunatic1icepick.my.id"
+pattern = "shopee.co.id.oracle.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.indo.1lunatic1icepick.my.id"
+pattern = "cf.shopee.co.id.oracle.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.indo.1lunatic1icepick.my.id"
+pattern = "cv.shopee.sg.oracle.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.indo.1lunatic1icepick.my.id"
+pattern = "cvs-deo.shopeemobile.com.oracle.1lunatic1icepick.my.id"
 custom_domain = true
 
 [vars]
