--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "amazon" # todo
+name = "linode" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "amazon.1lunatic1icepick.my.id"
+pattern = "linode.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.amazon.1lunatic1icepick.my.id"
+pattern = "shopee.co.id.linode.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.amazon.1lunatic1icepick.my.id"
+pattern = "cf.shopee.co.id.linode.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.amazon.1lunatic1icepick.my.id"
+pattern = "cv.shopee.sg.linode.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.amazon.1lunatic1icepick.my.id"
+pattern = "cvs-deo.shopeemobile.com.linode.1lunatic1icepick.my.id"
 custom_domain = true
 
 [vars]
