--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,19 @@ name = "cf-worker-ws-dev" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.satriadyit.eu.org"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.satriadyit.eu.org"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.satriadyit.eu.org"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.satriadyit.eu.org"
+custom_domain = true
+
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
