--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,20 +1,20 @@
-name = "cfsatria" # todo
+name = "indo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.satriadyit.eu.org"
+pattern = "indo.satriadyit.eu.org"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.satriadyit.eu.org"
+pattern = "shopee.co.id.indo.satriadyit.eu.org"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.satriadyit.eu.org"
+pattern = "cf.shopee.co.id.indo.satriadyit.eu.org"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.satriadyit.eu.org"
+pattern = "cv.shopee.sg.indo.satriadyit.eu.org"
 custom_domain = true
 
 
