--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "horizon" # todo
+name = "taobao" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "horizon.1lunatic1icepick.my.id"
+pattern = "taobao.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.horizon.1lunatic1icepick.my.id"
+pattern = "shopee.co.id.taobao.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.horizon.1lunatic1icepick.my.id"
+pattern = "cf.shopee.co.id.taobao.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.horizon.1lunatic1icepick.my.id"
+pattern = "cv.shopee.sg.taobao.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.horizon.1lunatic1icepick.my.id"
+pattern = "cvs-deo.shopeemobile.com.taobao.1lunatic1icepick.my.id"
 custom_domain = true
 
 [vars]
