--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,24 @@
-name = "cf-worker-ws-dev" # todo
+name = "v19" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "v19.tan.my.id"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.v19.tan.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.v19.tan.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.v19.tan.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.v19.tan.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +27,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "d6be689e-ce57-4b3d-ba6c-dd2c49c7c7a3"
