--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "dbs" # todo
+name = "vultr" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "dbs.1lunatic1icepick.my.id"
+pattern = "vultr.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.dbs.1lunatic1icepick.my.id"
+pattern = "shopee.co.id.vultr.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.dbs.1lunatic1icepick.my.id"
+pattern = "cf.shopee.co.id.vultr.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.dbs.1lunatic1icepick.my.id"
+pattern = "cv.shopee.sg.vultr.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.dbs.1lunatic1icepick.my.id"
+pattern = "cvs-deo.shopeemobile.com.vultr.1lunatic1icepick.my.id"
 custom_domain = true
 
 [vars]
