--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "ovh" # todo
+name = "belnet" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "ovh.1lunatic1icepick.my.id"
+pattern = "belnet.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.ovh.1lunatic1icepick.my.id"
+pattern = "shopee.co.id.belnet.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.ovh.1lunatic1icepick.my.id"
+pattern = "cf.shopee.co.id.belnet.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.ovh.1lunatic1icepick.my.id"
+pattern = "cv.shopee.sg.belnet.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.ovh.1lunatic1icepick.my.id"
+pattern = "cvs-deo.shopeemobile.com.belnet.1lunatic1icepick.my.id"
 custom_domain = true
 
 [vars]
