--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "india" # todo
+name = "my" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "india.1lunatic1icepick.my.id"
+pattern = "my.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.india.1lunatic1icepick.my.id"
+pattern = "shopee.co.id.my.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.india.1lunatic1icepick.my.id"
+pattern = "cf.shopee.co.id.my.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.india.1lunatic1icepick.my.id"
+pattern = "cv.shopee.sg.my.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.india.1lunatic1icepick.my.id"
+pattern = "cvs-deo.shopeemobile.com.my.1lunatic1icepick.my.id"
 custom_domain = true
 
 [vars]
