--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "1kroracle" # todo
+name = "jp365" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "kroracle.1lunatic1icepick.my.id"
+pattern = "jp365.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.kroracle.1lunatic1icepick.my.id"
+pattern = "shopee.co.id.jp365.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.kroracle.1lunatic1icepick.my.id"
+pattern = "cf.shopee.co.id.jp365.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.kroracle.1lunatic1icepick.my.id"
+pattern = "cv.shopee.sg.jp365.1lunatic1icepick.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.kroracle.1lunatic1icepick.my.id"
+pattern = "cvs-deo.shopeemobile.com.jp365.1lunatic1icepick.my.id"
 custom_domain = true
 
 [vars]
