--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "idnda" # todo
+name = "Sgdgda" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "id.gyzeira.biz.id"
+pattern = "sgdg.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.id.gyzeira.biz.id"
+pattern = "shopee.co.id.sgdg.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.id.gyzeira.biz.id"
+pattern = "cf.shopee.co.id.sgdg.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.id.gyzeira.biz.id"
+pattern = "cv.shopee.sg.sgdg.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.id.gyzeira.biz.id"
+pattern = "cvs-deo.shopeemobile.com.sgdg.gyzeira.biz.id"
 custom_domain = true
 
 [vars]
