--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,21 @@
-name = "cf-worker-ws-dev" # todo
+name = "indo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "indo.satriadyit.eu.org"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.indo.satriadyit.eu.org"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.indo.satriadyit.eu.org"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.indo.satriadyit.eu.org"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +24,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "03a4a445-b7a2-4da5-9d93-563ecc342626"
