--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,29 +1,32 @@
-name = "sglinode" # todo
+name = "sgdodigi" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sglinode.gyzeira.biz.id"
+pattern = "sgdo.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.sglinode.gyzeira.biz.id"
+pattern = "shopee.co.id.sgdo.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sglinode.gyzeira.biz.id"
+pattern = "cf.shopee.co.id.sgdo.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.sglinode.gyzeira.biz.id"
+pattern = "cv.shopee.sg.sgdo.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.sglinode.gyzeira.biz.id"
+pattern = "cvs-deo.shopeemobile.com.sgdo.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.sglinode.gyzeira.biz.id"
+pattern = "quiz.vidio.com.sgdo.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "dl-cvs.ggbluefox.com.sglinode.gyzeira.biz.id"
+pattern = "dl-cvs.ggbluefox.com.sgdo.gyzeira.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "img.email1.vidio.com.sgdo.gyzeira.biz.id"
 custom_domain = true
 
 [vars]
