--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,28 +5,28 @@ name = "sgdodigi" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgdo.gyzeira.biz.id"
+pattern = "sg1.gyz.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.sgdo.gyzeira.biz.id"
+pattern = "cvs-deo.shopeemobile.com.sg1.gyz.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sgdo.gyzeira.biz.id"
+pattern = "cf.shopee.co.id.sg1.gyz.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.sgdo.gyzeira.biz.id"
+pattern = "cv.shopee.sg1.gyz.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.sgdo.gyzeira.biz.id"
+pattern = "cvs-deo.shopeemobile.com.sg1.gyz.my.id"
 custom_domain = true
 [[routes]]
 pattern = "quiz.vidio.com.sgdo.gyzeira.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "dl-cvs.ggbluefox.com.sgdo.gyzeira.biz.id"
+pattern = "dl-cvs.ggbluefox.com.sg1.gyz.my.id"
 custom_domain = true
 [[routes]]
-pattern = "img.email1.vidio.com.sgdo.gyzeira.biz.id"
+pattern = "img.email1.vidio.com.sg1.gyz.my.id"
 custom_domain = true
 
 [vars]
