--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,26 @@
-name = "cf-worker-ws-dev" # todo
+name = "contoh" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern=
+"nama domain 1"
+custom-domain=true
+[[routes]]
+pattern=
+"nama domain 2"
+custom-domain=true
+[[routes]]
+pattern=
+"nama domain 3"
+custom-domain=true
+[[routes]]
+pattern=
+"nama domain"
+custom-domain=true
+
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +29,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "b97e81a3-4c6f-4370-8500-8b010e335307"
