--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,32 @@
-name = "gcp-us" # todo
+name = "Vless-Worker" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "gcp.putrir.my.id"
+pattern = "id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.gcp.putrir.my.id"
+pattern = "shopee.co.id.id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.gcp.putrir.my.id"
+pattern = "cf.shopee.co.id.id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.gcp.putrir.my.id"
+pattern = "v.whatsapp.com.id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.gcp.putrir.my.id"
+pattern = "graph.instagram.com.id1.tingkehvpn.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.id1.tingkehvpn.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "poe.garena.com.id1.tingkehvpn.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "investors.spotify.com.id1.tingkehvpn.biz.id"
 custom_domain = true
 
 [vars]
@@ -27,4 +36,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "bef3c324-2d55-4575-af15-9bff39a431e1"
+UUID = "f9021b31-e8bd-4b4d-a1d3-c9b0c1476c44"
