--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,7 +14,7 @@ custom_domain = true
 pattern = "cf.shopee.co.id.id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "v.whatsapp.com.id1.tingkehvpn.my.id"
+pattern = "v.whatsapp.net.id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
 pattern = "graph.instagram.com.id1.tingkehvpn.biz.id"
