--- a/wrangler.toml
+++ b/wrangler.toml
@@ -17,16 +17,16 @@ custom_domain = true
 pattern = "v.whatsapp.net.id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "graph.instagram.com.id1.tingkehvpn.biz.id"
+pattern = "graph.instagram.com.id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.id1.tingkehvpn.biz.id"
+pattern = "ava.game.naver.com.id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "poe.garena.com.id1.tingkehvpn.biz.id"
+pattern = "poe.garena.com.id1.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "investors.spotify.com.id1.tingkehvpn.biz.id"
+pattern = "investors.spotify.com.id1.tingkehvpn.my.id"
 custom_domain = true
 
 
