--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "contoh" # todo
+name = "xt" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -6,19 +6,19 @@ main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
 pattern=
-"nama domain 1"
+"xlaxiata.co.id.xt.trudjan.my.id"
 custom-domain=true
 [[routes]]
 pattern=
-"nama domain 2"
+"xlaxiata.co.id.xt.trudjan.my.id"
 custom-domain=true
 [[routes]]
 pattern=
-"nama domain 3"
+"xlaxiata.co.id.xt.trudjan.my.id"
 custom-domain=true
 [[routes]]
 pattern=
-"nama domain"
+"xlaxiata.co.id.xt.trudjan.my.id"
 custom-domain=true
 
 
