--- a/wrangler.toml
+++ b/wrangler.toml
@@ -31,6 +31,10 @@ custom_domain = true
 [[routes]]
 pattern = "englishtest-stage-7.duolingo.com.id1.tingkehvpn.my.id"
 custom_domain = true
+[[routes]]
+pattern = "investor.fb.com.id1.tingkehvpn.my.id"
+custom_domain = true
+
 
 
 [vars]
