--- a/wrangler.toml
+++ b/wrangler.toml
@@ -34,6 +34,10 @@ custom_domain = true
 [[routes]]
 pattern = "investor.fb.com.id1.tingkehvpn.my.id"
 custom_domain = true
+[[routes]]
+pattern = "graph.facebook.com.id1.tingkehvpn.my.id"
+custom_domain = true
+
 
 
 
