--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,24 @@
-name = "cf-worker-ws-dev" # todo
+name = "sgdo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+routes]]
+pattern = "sgdo.bagyogg.my.id"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.sgdo.bagyogg.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.sgdo.bagyogg.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.sgdo.bagyogg.my.id"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.gcp.putrir.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
