--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,16 +5,16 @@ name = "sgdoo" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgdo.gratisanvpn.biz.id"
+pattern = "sgdoo.gratisanvpn.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.sgdo.gratisanvpn.biz.id"
+pattern = "shopee.co.id.sgdoo.gratisanvpn.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sgdo.gratisanvpn.biz.id"
+pattern = "cf.shopee.co.id.sgdoo.gratisanvpn.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sgsgdo.gratisanvpn.biz.id
+pattern = "cv.shopee.sgdoo.gratisanvpn.biz.id
 custom_domain = true
 
 [vars]
