--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,6 +8,18 @@ compatibility_date = "2023-05-26"
 pattern = "katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
+pattern = "shopee.co.id.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
 pattern = "englishtest-stage-7.duolingo.com.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
@@ -18,6 +30,15 @@ pattern = "support.duolingo.com.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
 pattern = "blog.webex.com.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.katum.filegear-sg.me"
 custom_domain = true
 
 [vars]
