--- a/wrangler.toml
+++ b/wrangler.toml
@@ -39,4 +39,4 @@ pattern = "cvs-deo.shopeemobile.com.indo.bjhonvpn.filegear-sg.me"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "e2106614-193b-4697-89a9-86f2a4c2b3b5"
